--- a/shrek.html
+++ b/shrek.html
@@ -27,11 +27,19 @@
 		<div class="thumbnail">
 		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>
+	  <h2 >Shrek In The Swamp Karaoke Dance Party (2001)</h2>
+		<div class="thumbnail">
+		  <p><iframe src="https://drive.google.com/file/d/1XM3JpNRp3px4rcqJfqZq4SqBglNQP-dB/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		</div>
 	  <h2 >Shrek 4D The Ghost Of Lord Farquaad (2003)</h2>
 		<div class="thumbnail">
 		  <p><iframe src="https://drive.google.com/file/d/1YmlxWl-Bz7oeIP3QE31oIzO-3UEPqS2e/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>
 	  <h2 >Shrek 2 (2004)</h2>
+		<div class="thumbnail">
+		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		</div>
+	  <h2 >Far Far Away Idol (2004)</h2>
 		<div class="thumbnail">
 		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>
