--- a/shrek.html
+++ b/shrek.html
@@ -67,7 +67,15 @@
 		<div class="thumbnail">
 		  <p><iframe src="https://drive.google.com/file/d/1KCWQ0fxvObGoqGQ_BN5zjvKTzGhk34FS/preview" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>	
+    	  <h2 >The Pig Who Cried Werewolf (2011)</h2>
+		<div class="thumbnail">
+		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		</div>	
     	  <h2 >Puss in Boots (2011)</h2>
+		<div class="thumbnail">
+		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		</div>	
+    	  <h2 >Puss in Boots: The Three Diablos (2012)</h2>
 		<div class="thumbnail">
 		  <p><iframe src="" width="640" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>	
