--- a/spiderman.html
+++ b/spiderman.html
@@ -14,11 +14,14 @@
 <link rel="apple-touch-icon" href="images/spiderman/apple-touch-icon.png">
 <link rel="icon" sizes="192x192" href="images/spiderman/android.png">
 </head>
+<video autoplay muted loop id="myVideo">
+  <source src="spiderman.mp4" type="video/mp4">
+</video>
 <body>
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/shrek-logo.png" alt="Shrek" width="25%" height="auto"></a>
+	<a><img src="images/spiderman-logo.png" alt="Spider-Man" width="25%" height="auto"></a>
   </span>
   <!-- Home Section -->
   <section class="home" id="home">
