--- a/spiderman.html
+++ b/spiderman.html
@@ -14,11 +14,7 @@
 <link rel="apple-touch-icon" href="images/spiderman/apple-touch-icon.png">
 <link rel="icon" sizes="192x192" href="images/spiderman/android.png">
 </head>
-<video poster="newyork.png" id="bgvid" playsinline autoplay muted loop>
-  <!-- 
-- Video needs to be muted, since Chrome 66+ will not autoplay video with sound.
-WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-<source src="spiderman.mp4" type="video/mp4">
+<video src="spiderman.mp4" autoplay loop playsinline muted></video>
 
 </video>
 <body>
