--- a/spiderman.html
+++ b/spiderman.html
@@ -14,8 +14,7 @@
 <link rel="apple-touch-icon" href="images/spiderman/apple-touch-icon.png">
 <link rel="icon" sizes="192x192" href="images/spiderman/android.png">
 </head>
-<video src="spiderman.mp4" autoplay loop playsinline muted></video>
-
+<video src="spiderman.mp4" autoplay loop playsinline muted>
 </video>
 <body>
 <!-- Main Container -->
