--- a/spiderman.html
+++ b/spiderman.html
@@ -14,9 +14,11 @@
 <link rel="apple-touch-icon" href="images/spiderman/apple-touch-icon.png">
 <link rel="icon" sizes="192x192" href="images/spiderman/android.png">
 </head>
-<video src="spiderman.mp4" autoplay loop playsinline muted>
-</video>
 <body>
+<div class="hero">
+  <video playsinline autoplay muted loop class="back-video">
+  <source src="spiderman.mp4" type="video/mp4">
+</video>
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
@@ -74,5 +76,6 @@
 </section>
 </div>
 <!-- Main Container Ends -->
+</div>
 </body>
 </html>
