--- a/spiderman.html
+++ b/spiderman.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="hero">
-  <video playsinline autoplay muted loop class="back-video">
+  <video autoplay loop muted playsinline class="back-video">
   <source src="spiderman.mp4" type="video/mp4">
 </video>
 <!-- Main Container -->
