--- a/dbkai.html
+++ b/dbkai.html
@@ -27,6 +27,7 @@
         <li><a href="index.html">Dragon Ball</a></li>
 		<li> <a href="dbz.html">Dragon Ball Z</a></li>
 		<li> <a href="dbs.html">Dragon Ball Super</a></li>
+	        <li> <a href="dbdaima.html">Dragon Ball Daima</a></li>
 		<li> <a href="dbkai.html">Dragon Ball Z Kai</a></li>
 		<li> <a href="dbgt.html">Dragon Ball GT</a></li>
       </ul>
