--- a/dbdaima.html
+++ b/dbdaima.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dragon Ball Daima</title>
+<meta content="Dragon Ball Daima" property="og:title" />
+<meta content="Dragon Ball Daima episodes" property="og:description" />
+<meta content="https://metrunui.github.io/dbdaima.html" property="og:url" />
+<meta content="https://metrunui.github.io/images/daima/daima-android.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/favicon.ico">
 <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
