--- a/dbdaima.html
+++ b/dbdaima.html
@@ -49,6 +49,11 @@
 		  <h4 >Episode 1</h4>
 		  <p></p>
 		</div>
+		<div class="thumbnail">
+		  <p><iframe src="https://drive.google.com/file/d/1mHCyI84bj_s9kLddxjmckHnD-VR-bXpM/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <h4 >Episode 2</h4>
+		  <p></p>
+		</div>
     </section>
 </div>
 </section>
